[Qt][Win]QtTestBrowser somehow picks up DumpRenderTree's main.cpp, causing a failure to link https://bugs.webkit.org/show_bug.cgi?id=88874

Patch by Joel Dillon <joel.dillon@codethink.co.uk> on 2012-06-13
Reviewed by Simon Hausmann.

Rename main.cpp in QtTestBrowser because on Windows
it conflicts with main.cpp from DumpRenderTree.

* QtTestBrowser/QtTestBrowser.pro:
* QtTestBrowser/qttestbrowser.cpp: Renamed from Tools/QtTestBrowser/main.cpp.
(launcherMain):
(LauncherApplication):
(LauncherApplication::urls):
(LauncherApplication::isRobotized):
(LauncherApplication::robotTimeout):
(LauncherApplication::robotExtraTime):
(LauncherApplication::applyDefaultSettings):
(LauncherApplication::LauncherApplication):
(requiresGraphicsView):
(LauncherApplication::handleUserOptions):
(main):

git-svn-id: svn://svn.chromium.org/blink/trunk@120166 bbb929c8-8fbe-4397-9dbb-9b2b20218538