third_party/WebKit/Tools/QtTestBrowser/qttestbrowser.cpp
@@ -319,4 +319,4 @@ int main(int argc, char **argv)
     return launcherMain(app);
 }
 
-#include "main.moc"
+#include "qttestbrowser.moc"
