third_party/WebKit/Tools/QtTestBrowser/QtTestBrowser.pro
@@ -18,7 +18,7 @@ SOURCES += \
     $${ROOT_WEBKIT_DIR}/Tools/DumpRenderTree/qt/QtInitializeTestFonts.cpp \
     locationedit.cpp \
     launcherwindow.cpp \
-    main.cpp \
+    qttestbrowser.cpp \
     mainwindow.cpp \
     urlloader.cpp \
     utils.cpp \
